# CompetitiveCoding

./: .clang-format  .gitignore  CMakeLists.txt  azure-pipelines.yml  format-all.sh
Codechef/: CMakeLists.txt
Codeforces/: CMakeLists.txt
Facebook/Hacker cup/: CMakeLists.txt  CMakeSettings.json
GeeksForGeeks/: CMakeLists.txt
Google code jam/: CMakeLists.txt
Google/Google code jam/: CMakeLists.txt
Google/Kickstart/: CMakeLists.txt
Hackerearth/: CMakeLists.txt  Hackerearth.sln
Hackerearth/Bit manipulation/: Bit manipulation.sln
Hackerearth/Bricks and building/: Bricks and building.cpp  Bricks and building.vcxproj  Bricks and building.vcxproj.filters  bin search.cpp
Hackerearth/Card game/: Card game.cpp  Card game.txt  Card game.vcxproj  Card game.vcxproj.filters
Hackerearth/Coin game/: Coin game.cpp  Coin game.vcxproj  Coin game.vcxproj.filters
Hackerearth/Count the bits/: Count the bits.cpp  Count the bits.vcxproj  Count the bits.vcxproj.filters
Hackerearth/Gary and queries/: Gary and queries.cpp  Gary and queries.txt  Gary and queries.vcxproj  Gary and queries.vcxproj.filters
Hackerearth/Hackerearth/: CMakeLists.txt  Hackerearth.sln
Hackerearth/Jarvis and lone integer/: Jarvis and lone integer.vcxproj  Jarvis and lone integer.vcxproj.filters
Hackerearth/K devices/: K devices.vcxproj  K devices.vcxproj.filters
Hackerearth/Little shino and k ancestors/: Little shino and k ancestors.vcxproj  Little shino and k ancestors.vcxproj.filters
Hackerearth/Little shino and number of divisors/: Little shino and number of divisors.vcxproj  prime_106.txt
Hackerearth/Monk and the box of cookies/: Monk and the box of cookies.cpp  Monk and the box of cookies.vcxproj  Monk and the box of cookies.vcxproj.filters
Hackerearth/Polynomial sign/: Polynomial sign.cpp  Polynomial sign.vcxproj  Polynomial sign.vcxproj.filters
Hackerearth/Quesion paper/: Quesion paper.vcxproj  Quesion paper.vcxproj.filters  Question paper.cpp
Hackerearth/September circuits '17/: September circuits '17.sln
Hackerearth/Sherlock and XOR/: Sherlock and XOR.cpp  Sherlock and XOR.vcxproj  Sherlock and XOR.vcxproj.filters
Hackerearth/Subham and binary strings/: Subham and binary strings.vcxproj  Subham and binary strings.vcxproj.filters
Hackerrank/: CMakeLists.txt
Hackerrank/Goldman Sachs CodeSprint/: Goldman Sachs CodeSprint.sln
Hackerrank/Hackerrank/: CMakeLists.txt  Hackerrank.sln
Hackerrank/Hourrank/: CMakeLists.txt
Hackerrank/May world codesprint/: compare the triplets.py
Neetcode/: CMakeLists.txt
Neetcode/3sum/: 3sum.cpp
Neetcode/Group anagrams/: Group anagrams.cpp
Neetcode/Top K Frequent Elements/: Top K Frequent Elements.cpp
Neetcode/Two sum/: Two sum.cpp
Neetcode/Valid palindrome/: Valid palindrome.cpp
Neetcode/Valid sudoku/: Valid sudoku.cpp
UVa/: CMakeLists.txt  CMakeSettings.json  UVa.sln
UVa/Ad hoc/: Ad hoc.sln
UVa/Add all/: Add all.cpp  Add all.vcxproj.filters  Add all2.txt  Add all4.txt
UVa/Ahoy pirates/: Ahoy pirates.cpp  Ahoy pirates.vcxproj  Ahoy pirates.vcxproj.filters
UVa/All integer average/: All integer average.vcxproj
UVa/Anagram/: Anagram.vcxproj  Anagram2.txt
UVa/Anagrams/: Anagrams.vcxproj  Anagrams3.txt
UVa/Anagrams by stack/: Anagrams by stack.cpp  Anagrams by stack.vcxproj  Anagrams by stack.vcxproj.filters
UVa/Ananagrams/: Ananagrams.vcxproj  Ananagrams.vcxproj.filters
UVa/Argus/: Argus.cpp  Argus4.txt  Argus5.txt
UVa/Army buddies/: Army buddies.vcxproj
UVa/Beat the spread/: Beat the spread.vcxproj
UVa/Bender B Rodriguez/: Bender B Rodriguez.vcxproj
UVa/Booklet printing/: Booklet printing.cpp  Booklet printing.vcxproj  Booklet printing.vcxproj.filters
UVa/Bowling/: Bowling.vcxproj
UVa/Bridge hand evaluator/: Bridge hand evaluator.vcxproj  Bridge hand evaluator.vcxproj.filters
UVa/Broken keyboard/: Broken keyboard.cpp  Broken keyboard.vcxproj  Broken keyboard.vcxproj.filters
UVa/Chess/: Chess.vcxproj  Chess2 output.txt
UVa/Chessboard in FEN/: Chessboard in FEN.cpp  Chessboard in FEN.vcxproj  Chessboard in FEN1.txt
UVa/Clock hands/: Clock hands.cpp  Clock hands.vcxproj
UVa/Conformity/: Conformity.cpp  Conformity.vcxproj  Conformity.vcxproj.filters
UVa/Consanguine calculations/: Consanguine calculations.vcxproj  Consanguine calculations.vcxproj.filters
UVa/Contest scoreboard/: Contest scoreboard.cpp  Contest scoreboard.vcxproj  Contest scoreboard.vcxproj.filters
UVa/Cost cutting/: Cost cutting.cpp  Cost cutting.vcxproj  Cost cutting.vcxproj.filters
UVa/Counterfeit dollar/: Counterfeit dollar.vcxproj
UVa/Division of nlogonia/: Division of nlogonia.vcxproj  Division of nlogonia.vcxproj.filters
UVa/Easy/: Easy.sln
UVa/Easy problem from rujia liu/: Easy problem from rujia liu.cpp  Easy problem from rujia liu.vcxproj  Easy problem from rujia liu.vcxproj.filters  Easy problem from rujia liu2.txt  Easy problem from rujia liu3.txt
UVa/Event planning/: Event planning.vcxproj  Event planning.vcxproj.filters
UVa/Ferry loading III/: Ferry loading III.cpp  Ferry loading III.txt  Ferry loading III.vcxproj  Ferry loading III.vcxproj.filters
UVa/Ferry loading IV/: Ferry loading IV.cpp  Ferry loading IV.vcxproj  Ferry loading IV.vcxproj.filters  Ferry loading IV2.txt  Ferry loading IV3.txt
UVa/Frequent values/: Frequent values.cpp  Frequent values.txt  Frequent values.vcxproj  Frequent values.vcxproj.filters  Main.java  utils.cpp
UVa/Grid successor/: Grid successor.cpp  Grid successor.vcxproj
UVa/Hangman judge/: Hangman judge.vcxproj  Hangman judge.vcxproj.filters
UVa/Hardwood species/: Hardwood species.cpp  Hardwood species.vcxproj  Hardwood species.vcxproj.filters
UVa/Hoax or what/: Hoax or what.cpp  Hoax or what.vcxproj  Hoax or what.vcxproj.filters
UVa/Horror dash/: Horror dash.vcxproj  Horror dash.vcxproj.filters
UVa/How many  knights/: How many  knights.vcxproj  How many knights.txt  How many knights1 output.txt
UVa/I can guess the data structure/: I can guess the data structure.cpp  I can guess the data structure.vcxproj
UVa/Rails/: Rails.cpp  (+2 more)
leetcode/: CMakeLists.txt
(+2172 files in other folders)
