cmake_minimum_required(VERSION 3.12)

project(CompetitiveCoding)

add_subdirectory(UVa)
add_subdirectory(Codeforces)
add_subdirectory(Codechef)
add_subdirectory(Hackerearth)
add_subdirectory(Hackerrank)
add_subdirectory(Leetcode)
add_subdirectory(Neetcode)
add_subdirectory(Techgig)
add_subdirectory(Topcoder)
add_subdirectory(SPOJ)
