cmake_minimum_required(VERSION 3.12)
project(Codechef)

set(CMAKE_CXX_STANDARD 14)

# Compete
add_executable(Chef_and_serves "Compete/2018/October challenge/Division 2/CHSERVE/Chef and serves.cpp")
add_executable(Byte_to_bit "Compete/2018/October challenge/Division 2/BITOBYT/Byte to bit.cpp")
add_executable(Chef_and_difficult_contests "Compete/2018/November challenge/CHFTIRED/Chef and difficult contests.cpp")
add_executable(Chef_and_happiness "Compete/2018/November challenge/CHHAPPY/Chef and happiness.cpp")
add_executable(Chef_and_ridges "Compete/2018/November challenge/PRDRG/Chef and ridges.cpp")
add_executable(Appy_loves_one "Compete/2018/November challenge/HMAPPY1/Appy loves one.cpp")

# Practice
add_executable(Closing_the_tweets "Practice/Medium/TWTCLOSE/Closing the tweets.cpp")