cmake_minimum_required(VERSION 3.12)
project(Codechef)

set(CMAKE_CXX_STANDARD 14)

# Compete
add_executable(Chef_and_serves "Compete/2018/October challenge/Division 2/CHSERVE/Chef and serves.cpp")
add_executable(Byte_to_bit "Compete/2018/October challenge/Division 2/BITOBYT/Byte to bit.cpp")
add_executable(Chef_and_difficult_contests "Compete/2018/November challenge/CHFTIRED/Chef and difficult contests.cpp")
add_executable(Chef_and_happiness "Compete/2018/November challenge/CHHAPPY/Chef and happiness.cpp")
add_executable(Chef_and_ridges "Compete/2018/November challenge/PRDRG/Chef and ridges.cpp")
add_executable(Appy_loves_one "Compete/2018/November challenge/HMAPPY1/Appy loves one.cpp")
add_executable(Magician_versus_chef_2 "Compete/2018/November challenge/MAGICHF2/Magician versus chef 2.cpp")
add_executable(Good_median "Compete/2018/November challenge/GMEDIAN/Good median.cpp")
add_executable(Chef_primes_and_trees "Compete/2018/November challenge/PRITREE/Chef primes and trees.cpp")
add_executable(Truth_and_dare "Compete/2018/November cook off/TRUEDARE/Truth and dare.cpp")
# Practice
add_executable(Closing_the_tweets "Practice/Medium/TWTCLOSE/Closing the tweets.cpp")