cmake_minimum_required(VERSION 3.8)
project(Codeforces)

set(CMAKE_CXX_STANDARD 17)

# Compete
    # Round 540
    add_executable(Water_buying "Compete/Round 540/A/Water buying.cpp")
    add_executable(Tanya_and_candies "Compete/Round 540/B/Tanya and candies.cpp")
    # Round 548
    add_executable(Even_substrings "Compete/Round 548/A/Even substrings.cpp")