cmake_minimum_required(VERSION 3.8)
project(Codeforces)

set(CMAKE_CXX_STANDARD 17)

# Compete
    # Round 540
    add_executable(Water_buying "Compete/Round 540/A/Water buying.cpp")
    add_executable(Tanya_and_candies "Compete/Round 540/B/Tanya and candies.cpp")
    # Round 548
    add_executable(Even_substrings "Compete/Round 548/A/Even substrings.cpp")
    add_executable(Chocolates "Compete/Round 548/B/Chocolates.cpp")
    # Round 549
    add_executable(Nirvana "Compete/Round 549/B/Nirvana.cpp")
    # Round 550
    add_executable(Diverse_strings "Compete/Round 550/A/Diverse strings.cpp")
    add_executable(Parity_alternated_deletions "Compete/Round 550/B/Parity alternated deletions.cpp")
    add_executable(Two_shuffled_sequences "Compete/Round 550/C/Two shuffled sequences.cpp")
    # Round 551
    add_executable(Serval_and_bus "Compete/Round 551/A/Serval and bus.cpp")
    add_executable(Serval_toy_bricks "Compete/Round 551/B/Serval and toy bricks.cpp")
    add_executable(Serval_and_parenthesis_sequence "Compete/Round 551/C/Serval and parenthesis sequence.cpp")