cmake_minimum_required(VERSION 3.8)
project(GeeksForGeeks)

set(CMAKE_CXX_STANDARD 17)

add_executable(Ugly_numbers "Dynamic programming/Ugly numbers/Ugly numbers.cpp")
add_executable(Find_largest_word_in_dictionary "Strings/Find the largest word in dictionary/Find largest word in dictionary.cpp")
add_executable(Find_the_longest_substring_with_k_unique_characters_in_a_given_string "Strings/Find the longest substring with k unique characters in a given string/Find the longest substring with k unique characters in a given string.cpp")
