cmake_minimum_required(VERSION 3.9)
project(Google_code_jam)

set(CMAKE_CXX_STANDARD 11)

add_executable(Saving_the_universe "2008/Qualification round/Saving the universe/Saving the universe.cpp")
add_executable(Train_timetable "2008/Qualification round/Train timetable/Train timetable.cpp" "2008/Qualification round/Train timetable/utils.cpp")