cmake_minimum_required(VERSION 3.12)
project(Neetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Two_sum_neetcode "Two sum/Two sum.cpp")
add_executable(Group_anagrams_neetcode "Group anagrams/Group anagrams.cpp")
add_executable(Top_K_Frequent_Elements "Top K Frequent Elements/Top K Frequent Elements.cpp")
